# zero2prod

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml
.cargo/: config.toml
configuration/: base.yaml  production.yaml
migrations/: 20220404071807_create_subscription_tokens_table.sql  20220416144210_create_users_table.sql  20220503084613_seed_user.sql  20220504054522_create_idempotency_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs
