[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.12"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.5"
serde-aux = "3"
unicode-segmentation = "1"
validator = "0.14"
rand = { version = "0.8", features=["std_rng"]}
thiserror = "1"
anyhow = "1"
base64 = "0.13"
argon2 = { version = "0.3", features = ["std"]}
urlencoding = "2"
htmlescape = "0.3"
hmac = { version = "0.12", features = ["std"]}
sha2 = "0.10"
hex = "0.4"
actix-web-flash-messages = { version = "0.3", features = ["cookies"]}
actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
serde_json = "1"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.sqlx]
version = "0.5.11"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
once_cell = "1"
claim = "0.5"
fake = "~2.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.8"
